--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,6 +6,9 @@
             "command": "/usr/bin/gcc",
             "args": [
                 "-fdiagnostics-color=always",
+                "-std=c90",
+                "-Wall",
+                "-Wpedantic",
                 "-g",
                 "${file}",
                 "-o",
